@@ -48,28 +48,12 @@ from bzrlib.tests import (
                           TestCaseWithTransport,
                           TestSkipped,
                           )
+from bzrlib.tests.bzrdir_implementations import TestCaseWithBzrDir
 from bzrlib.trace import mutter
 from bzrlib.transport import get_transport
 from bzrlib.upgrade import upgrade
 from bzrlib.remote import RemoteBzrDir
 from bzrlib.repofmt import weaverepo
-
-
-class TestCaseWithBzrDir(TestCaseWithTransport):
-
-    def setUp(self):
-        super(TestCaseWithBzrDir, self).setUp()
-        self.bzrdir = None
-
-    def get_bzrdir(self):
-        if self.bzrdir is None:
-            self.bzrdir = self.make_bzrdir(None)
-        return self.bzrdir
-
-    def make_bzrdir(self, relpath, format=None):
-        return super(TestCaseWithBzrDir, self).make_bzrdir(
-            relpath, format=self.bzrdir_format)
-
 
 
 class TestBzrDir(TestCaseWithBzrDir):
@@ -191,7 +175,15 @@ class TestBzrDir(TestCaseWithBzrDir):
             # so this test is irrelevant.
             return
         self.assertRaises(errors.NoWorkingTree, dir.open_workingtree)
-            
+
+    def test_clone_on_transport(self):
+        a_dir = self.make_bzrdir('source')
+        target_transport = a_dir.root_transport.clone('..').clone('target')
+        target = a_dir.clone_on_transport(target_transport)
+        self.assertNotEqual(a_dir.transport.base, target.transport.base)
+        self.assertDirectoriesEqual(a_dir.root_transport, target.root_transport,
+                                    ['./.bzr/merge-hashes'])
+
     def test_clone_bzrdir_empty(self):
         dir = self.make_bzrdir('source')
         target = dir.clone(self.get_url('target'))
